# PDFTwin

./: .gitignore  LICENSE  README.md  SDK.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: agents.md  architecture.md  font_matching.md  ir_schema.md  testing.md
scripts/: self_improve_loop.py
src/pdftwin/: __init__.py  cli.py  config.py  models.py  sdk.py
src/pdftwin/agents/: base.py  font_agent.py  image_agent.py  layout_agent.py  ocr_agent.py  orchestrator.py  text_agent.py  vector_agent.py  visual_verify_agent.py
src/pdftwin/comparison/: diff.py
src/pdftwin/llm/: wrapper.py
src/pdftwin/renderers/: pdf_renderer.py
tests/: test_core.py
